--- a/app/views/web/ost/partners/_partner_companies.erb
+++ b/app/views/web/ost/partners/_partner_companies.erb
@@ -915,7 +915,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h2 class="mt-5 pt-5 mb-5 text-center" id="partner-companies">Partner Companies</h2>
+        <h2 class="mt-5 pt-5 mb-5 text-center" id="partner-companies">Meet Our Partners</h2>
       </div>
     </div>
     <div class="row">
