--- a/app/views/web/ost/partners/_use_cases.erb
+++ b/app/views/web/ost/partners/_use_cases.erb
@@ -1,6 +1,6 @@
 <section class="py-5 container-fluid use_cases">
   <div class="row">
-    <h2 class="mx-auto"> Use Cases </h2>
+    <h2 class="mx-auto">Partner Projects</h2>
   </div>
   <%
     autoplay_version = "?rel=0&autoplay=1";
@@ -100,7 +100,7 @@
     <% end %>
   </div>
   <div class="text-center">
-    <a class="btn btn-primary text-center mt-5" href="/challenges" title="VIEW ALL POC PROJECTS" target="_blank">VIEW ALL POC PROJECTS</a>
+    <a class="btn btn-primary text-center mt-5" href="/challenges" title="VIEW ALL POC PROJECTS" target="_blank">VIEW ALL PARTNER PROJECTS</a>
   </div>
 </section>
 
