--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -3,12 +3,12 @@
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h2>Connect to The Utility Blockchain</h2>
+        <h2>Blockchain Infrastructure to Create New Economies</h2>
         <p class="mt-3">
-          OST is developing the essential blockchain infrastructure and toolkit for businesses to help them tokenize their economies. No blockchain development experience needed. Watch how 60+ projects are already using OST technology for their apps and communities.
+          OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.
         </p>
         <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Discover OST KIT⍺">Discover OST KIT⍺</a>
-        <a href="/challenges" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="View All Projects">View All Projects</a>
+        <a href="/partners" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Meet Our Partners</a>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
