--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -3,7 +3,7 @@
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h2>Blockchain Infrastructure to Create New Economies</h2>
+        <h2>Blockchain Infrastructure to Empower New Economies</h2>
         <p class="mt-3">
           OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.
         </p>
