changing RLAY partner company hover color requested by Nike and Prineel

--- a/app/views/web/ost/partners/_partner_companies.erb
+++ b/app/views/web/ost/partners/_partner_companies.erb
@@ -587,7 +587,7 @@
         "dapps"
       ],
       size: "start-up",
-      on_hover_bgcolor: "#3f14a7",
+      on_hover_bgcolor: "#0032FF",
       on_hover_imgcolor: "classname",
       sprite_index: 27,
       has_exited: false,
