--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -47,6 +47,13 @@
                                 description: "Renee Wong is seasoned financial strategist with 10+ years experience as CFO and General Manager in high growth businesses. Her previous experience includes executive and financial leadership roles at Dashlane, Fab.com, and Pop Sugar."
                             },
                             {
+                              name: "Francesco Pacella",
+                              title: "Vice President of Product",
+                              image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Francesco-Pacella.png",
+                              linkedIn: 'https://www.linkedin.com/in/francescopacella/',
+                              description: 'Francesco "Frankie" Pacella is a Product and Marketing Manager with 5 years of experience. He developed and scaled a number of projects and companies on the tech scene across Europe and Asia focusing on growth, engagement, monetization, and analytics.'
+                            },
+                            {
                                 name: "Adeola Ogunwole",
                                 title: "Vice President of Marketing",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Adeola-Ogunwole.png",
@@ -70,13 +77,6 @@
                                 twitter: 'https://twitter.com/paulduplessis/',
                                 medium: 'https://medium.com/@pauldups/',
                                 description: "Paul J du Plessis has 10 years experience building technology for enterprises and growing startups in fintech, insuretech and blockchain technology. Paul joins OST as the business development lead working closely with the member companies launching their own branded tokens on the OST network of networks. You can find Paul in Berlin, Germany and Pune, India."
-                            },
-                            {
-                                name: "Francesco Pacella",
-                                title: "Director Product Managment",
-                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Francesco-Pacella.png",
-                                linkedIn: 'https://www.linkedin.com/in/francescopacella/',
-                                description: 'Francesco "Frankie" Pacella is a Product and Marketing Manager with 5 years of experience. He developed and scaled a number of projects and companies on the tech scene across Europe and Asia focusing on growth, engagement, monetization, and analytics.'
                             },
                             {
                                 name: "Wouter Verhoog",
