adding Tech PM and PM positions for Pune location

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -91,6 +91,16 @@
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1lgX@6RVsXiVKPS8gC10UUU-&embedsource=Embed",
                 description: "Community managers are on the front lines as representatives of the company in social media channels. We want to mobilise our community of developers, prospects, and beta users to become evangelists for OST and build new products based on the OpenST protocol.",
             },
+            {
+              profile: "Product Manager",
+              profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1hQkpjHUGnmWoXrpVWsuvVc-&embedsource=Embed",
+              description: "OST “Simple Token” is looking for numerous product managers to lead major facets of our product development. We’re specifically looking for business owners: product managers who think holistically about the product and who can function as mini CEO’s of their product lines, with complete ownership over project plans, deliverables timelines, specs, user experience, business cases, customer validation, and usage metrics.",
+            },
+            {
+              profile: "Technical Product Manager",
+              profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1nzMTcfcPMW5N0nRAyc4B8g-&embedsource=Embed",
+              description: "OST “Simple Token” is looking for technical product managers who are passionate about bridging blockchain technology and real world problems. We’re specifically looking for business owners with deep technical knowledge: technical product managers who think holistically about the product, the underlying technology, and who can function as mini CEO’s of their product lines, with complete ownership over project plans, deliverables timelines, specs, user experience, business cases, customer validation, and usage metrics.",
+            },
         ]
       %>
 
