roadmap uber banner

--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -1,4 +1,4 @@
-<%#= render :partial => "/web/ost/index/uber_banner" %>
+<%= render :partial => "/web/ost/index/uber_banner" %>
 <%= render :partial => "/shared/web/common/navbar" %>
 <%= render :partial => "/web/ost/index/jumbotron" %>
 <%= render :partial => "/web/ost/index/partners" %>
