Removing a very old roadmap from docs below Main Papers

--- a/app/views/web/ost/documents.html.erb
+++ b/app/views/web/ost/documents.html.erb
@@ -49,16 +49,7 @@
         An overview of the Simple Token Project and a vision for ongoing development of OpenST and Simple Token software, applications, and services by 3rd party developers.
       </p>
       <div class="horizontal-line"></div>
-      <h5 class="mt-4 pt-2">
-        <a href="https://d36lai1ppm9dxu.cloudfront.net/assets/docs/simple-token-infographic.pdf" target="_blank">Roadmap&nbsp;<svg class="icon-open-tab">
-          <switch>
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
-          </switch>
-        </svg></a>
-      </h5>
-      <p>Roadmap and timeline for the Simple Token project.</p>
-      <div class="horizontal-line"></div>
-
+      We still have a veeeery old roadmap there :speak_no_evil: last element below "Main Papers"
       <h4 class="mt-4">Side Papers</h4>
       <h5 class="mt-4 pt-2">
         <a href="https://docs.google.com/document/d/1ccNDCJmEqLAw1tzdRZz1mEnJGF7tCNpVT8i88QeO5CM/edit?usp=sharing" target="_blank">The OpenST Protocol & Platform Utility&nbsp;<svg class="icon-open-tab">
