theme color update

--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6{
 
 // Uber banner CSS
 .uber-banner-winners{
-  background-image: linear-gradient(272deg, #27b9d2, $teal);
+  background-color:  $blue-900;
   padding-top: 12px;
   padding-bottom: 12px;
   letter-spacing: 0.6px;
