--- a/app/assets/stylesheets/web/ost-index.css
+++ b/app/assets/stylesheets/web/ost-index.css
@@ -9,4 +9,7 @@
  *= require web/ost/index/Technology
  *= require plugins/slick/slick
  *= require plugins/slick/slick-theme
+
+ //Remove this when theme accross the site is consistent and delete the file.
+ *= require web/ost/index/HomeOverwrite
  */
