--- a/app/views/web/ost/index/_openst_technology.erb
+++ b/app/views/web/ost/index/_openst_technology.erb
@@ -1,7 +1,7 @@
 <section class="container-fluid container-openst-technology mt-4" id="developerresources">
   <div class="row mb-3">
     <div class="col col-md-8 mx-md-auto text-center">
-      <h1>The OST Technology Stack</h1>
+      <h1 class="header-blue-900">The OST Technology Stack</h1>
     </div>
   </div>
   <div class="row">
