--- a/app/views/web/ost/documents.html.erb
+++ b/app/views/web/ost/documents.html.erb
@@ -50,7 +50,7 @@
       </p>
       <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
-        <a href="https://drive.google.com/file/u/1/d/1TxRdXqOXVhS9hurPDzRkKwnf5YHmplxg/view?usp=sharing" target="_blank">OST Project Roadmap 2017–2021
+        <a href="https://drive.google.com/file/d/1dxBlkfSYPi0CPxe1WjVekt2p2qQVdF2z/view" target="_blank">OST Project Roadmap 2017–2021
           <svg class="icon-open-tab">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -58,7 +58,7 @@
           </svg>
         </a>
       </h5>
-      <p>4 year roadmap to scale our vision for OST to billions of users, across multiple blockchains, decentralized, fully autonomous, and with human and machine-to-machine transactions.</p>
+      <p>4-year roadmap to scale our vision for OST to billions of users, across multiple blockchains, decentralized, fully autonomous, and with human and machine-to-machine transactions.</p>
       <div class="horizontal-line"></div>
 
       <h4 class="mt-4">Side Papers</h4>
