--- a/app/views/web/ost/alpha3submissions/_contact_us.erb
+++ b/app/views/web/ost/alpha3submissions/_contact_us.erb
@@ -99,7 +99,7 @@
             </switch>
           </svg>
           <h5>Thank you for submitting the POC.</h5>
-          <h5>Out team will keep you update on the progress of the contest and the results.</h5>
+          <h5>Our team will keep you updated on the progress of the contest and the results.</h5>
           <button class="btn btn-primary mt-4" title="Close" data-dismiss="modal">Close</button>
         </div>
       </div>
