--- a/app/views/web/ost/alpha3submissions/_contact_us.erb
+++ b/app/views/web/ost/alpha3submissions/_contact_us.erb
@@ -74,7 +74,7 @@
             <div class="g-recaptcha form-recapcha-wrap" data-sitekey="<%= GlobalConstant::Base.recaptcha['site_key'] %>"></div>
             <div class="error" data-forid="recaptcha" style="text-align: center"></div>
           </div>
-          <button type="submit" class="btn btn-primary mt-4 d-block" id="alpha-poc-submit" style="margin: 0 auto;width: 150px" title="Submit">Submit</button>
+          <button data-submiting="Submitting..." type="submit" class="btn btn-primary mt-4 d-block" id="alpha-poc-submit" style="margin: 0 auto;width: 150px" title="Submit">Submit</button>
           <div class="invalid-feedback general_error text-center"></div>
 
         </form>
