--- a/app/assets/stylesheets/web/ost/alpha3submissions/ContactUs.scss
+++ b/app/assets/stylesheets/web/ost/alpha3submissions/ContactUs.scss
@@ -81,6 +81,20 @@
     box-shadow: none!important;
     border-radius: 0;
   }
+
+  /* ToDo Move it to theme later*/
+  .form-group {
+    margin-bottom: 0;
+    .invalid-feedback{
+      min-height: 25px;
+      display: block;
+      visibility: hidden;
+      &.is-invalid{
+        visibility: visible;
+      }
+    }
+  }
+
 }
 
 .form-recapcha .form-recapcha-wrap div {
