--- a/app/views/web/ost/alpha3submissions/_contact_us.erb
+++ b/app/views/web/ost/alpha3submissions/_contact_us.erb
@@ -5,7 +5,7 @@
       <div class="row">
 
         <form data-ost-formhelper
-              action="/api/home/alpha3/submission" method="POST"
+              action="/api/home/alpha3/submission" method="GET"
               class="custom-form col-10 col-md-8 col-lg-6 mx-auto"
               id="alpha-poc-submit-form">
 
