--- a/app/views/web/ost/alpha3submissions/_jumbotron.erb
+++ b/app/views/web/ost/alpha3submissions/_jumbotron.erb
@@ -14,7 +14,7 @@
           <li>At least one user’s token balance and transaction history displayed in their logged-in version of your app or website</li>
         </ul>
         <div class="alert alert-info mt-4" role="alert">
-          Change box text to: Make sure you clearly explain and demonstrate which in-app events are triggering a token transfer and upload your video on YouTube (max. duration: 5 minutes) – <span class="font-weight-normal">Please ensure it's publicly viewable.</span>
+          Make sure you clearly explain and demonstrate which in-app events are triggering a token transfer and upload your video on YouTube (max. duration: 5 minutes) – <span class="font-weight-normal">Please ensure it's publicly viewable.</span>
         </div>
       </div>
 
