--- a/app/views/web/ost/alpha3submissions/_contact_us.erb
+++ b/app/views/web/ost/alpha3submissions/_contact_us.erb
@@ -1,7 +1,7 @@
 <section class="container-fluid position-relative">
   <div class="row container-contact-us pt-5">
     <div class="container mx-auto">
-      <h3 class="mb-5 font-weight-normal text-center">Please fill in the form below to submit your POC.</h3>
+      <h3 class="mb-5 font-weight-normal text-center">OST KIT Alpha III Submission Form</h3>
       <div class="row">
 
         <form data-ost-formhelper
@@ -84,15 +84,15 @@
           </div>
 
           <div class="input-container form-group mb-3">
-            <label for="ost_market_communicate" class="label-cbx mb-0">
-              <input class="input form-control" id="ost_market_communicate" type="checkbox" name="ost_market_communicate" value="1">
+            <label for="kit_marketing" class="label-cbx mb-0">
+              <input class="input form-control" id="kit_marketing" type="checkbox" name="kit_marketing" value="1">
               <div class="checkbox">
                 <svg width="18px" height="18px" viewBox="0 0 20 20">
                   <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
                   <polyline points="4 11 8 15 16 6"></polyline>
                 </svg>
               </div>
-              <span class="font-weight-normal"> I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
+              <span class="font-weight-normal">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
             </label>
           </div>
 
