--- a/app/views/web/ost/alpha3submissions/_jumbotron.erb
+++ b/app/views/web/ost/alpha3submissions/_jumbotron.erb
@@ -11,10 +11,11 @@
           <li>A live demo of the user interface to your project</li>
           <li>A live log of the backend server relevant for the in-app events that trigger token transfers and that connect to the OST Ledger and Balance APIs</li>
           <li>Transactional interactions on OST VIEW</li>
-          <li>At least one user’s token balance and transaction history displayed in their logged-in version of your app or website</li>
+          <li>At least one user’s token balance and transaction history displayed in the end-user front-end environment of your app or website</li>
         </ul>
         <div class="alert alert-info mt-4" role="alert">
-          Make sure you clearly explain and demonstrate which in-app events are triggering a token transfer and upload your video on YouTube (max. duration: 5 minutes) – <span class="font-weight-normal">Please ensure it's publicly viewable.</span>
+          <p class="mb-0">Make sure you clearly explain and demonstrate which in-app events are triggering a token transfer and upload your video on YouTube (max. duration: 5 minutes) – <span class="font-weight-normal">Please ensure it's publicly viewable.</span></p>
+          <p class="mb-0"><b>TIP:</b> <a href="https://youtu.be/-SxJ8c1Xh_A?t=1m09s" target="_blank"><u>Watch our demo</u></a> for an example of how to present a POC.</p>
         </div>
       </div>
 
