--- a/app/views/web/ost/alpha3submissions/_jumbotron.erb
+++ b/app/views/web/ost/alpha3submissions/_jumbotron.erb
@@ -3,12 +3,12 @@
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h3 class="font-weight-bold">Alpha III POC submission</h3>
+        <h3 class="font-weight-bold">Alpha III POC Submission</h3>
         <p class="mt-3 mb-2 font-weight-normal">Your submission video must contain the following:</p>
         <ul class="jumbotron-points">
           <li>A quick intro of all the people who work on the project</li>
           <li>An overview of your POC goals</li>
-          <li>A live demo of the user interface to your project</li>
+          <li>A live demo of the user interface of your app or website</li>
           <li>A live log of the backend server relevant for the in-app events that trigger token transfers and that connect to the OST Ledger and Balance APIs</li>
           <li>Transactional interactions on OST VIEW</li>
           <li>At least one user’s token balance and transaction history displayed in the end-user front-end environment of your app or website</li>
