--- a/app/views/web/ost/alpha3submissions/_jumbotron.erb
+++ b/app/views/web/ost/alpha3submissions/_jumbotron.erb
@@ -4,7 +4,7 @@
 
       <div class="col-md-12 col-lg-6">
         <h3 class="font-weight-bold">Alpha III POC Submission</h3>
-        <p class="mt-3 mb-2 font-weight-normal">Your submission video must contain the following:</p>
+        <p class="mt-3 mb-2 font-weight-normal">Your submission video must show the following:</p>
         <ul class="jumbotron-points">
           <li>A quick intro of all the people who work on the project</li>
           <li>An overview of your POC goals</li>
@@ -14,7 +14,7 @@
           <li>At least one user’s token balance and transaction history displayed in the end-user front-end environment of your app or website</li>
         </ul>
         <div class="alert alert-info mt-4" role="alert">
-          <p class="mb-0">Make sure you clearly explain and demonstrate which in-app events are triggering a token transfer and upload your video on YouTube (max. duration: 5 minutes) – <span class="font-weight-normal">Please ensure it's publicly viewable.</span></p>
+          <p class="mb-0">Make sure you clearly explain and demonstrate which in-app events are triggering a token transfer and upload your video on YouTube – <span class="font-weight-normal">Please ensure it's publicly viewable, with a maximum duration of 5:00 minutes.</span></p>
           <p class="mb-0"><b>TIP:</b> <a href="https://youtu.be/-SxJ8c1Xh_A?t=1m09s" target="_blank"><u>Watch our demo</u></a> for an example of how to present a POC.</p>
         </div>
       </div>
