Two new positions for Berlin location

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -60,6 +60,16 @@
                 description: "We are currently looking for an experienced Office Manager & Head of Administration to join our team in Berlin. The person will be responsible for organising and coordinating everything office and administration related, to ensure a smooth and pleasant working environment. This is a perfect role for an energetic multi-tasker.",
             },
             {
+                profile: "Product Manager",
+                profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1sxK@7qnG@TJY8fU4PmHMOk-&embedsource=Embed",
+                description: "OST “Simple Token” is looking for numerous product managers to lead major facets of our product development. We’re specifically looking for business owners: product managers who think holistically about the product and who can function as mini CEO’s of their product lines, with complete ownership over project plans, deliverables timelines, specs, user experience, business cases, customer validation, and usage metrics.",
+            },
+            {
+                profile: "Technical Product Manager",
+                profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1qER6kOCe8Rme7Ke4.GBVOc-&embedsource=Embed",
+                description: "OST “Simple Token” is looking for technical product managers who are passionate about bridging blockchain technology and real world problems. We’re specifically looking for business owners with deep technical knowledge: technical product managers who think holistically about the product, the underlying technology, and who can function as mini CEO’s of their product lines, with complete ownership over project plans, deliverables timelines, specs, user experience, business cases, customer validation, and usage metrics.",
+            },
+            {
                 location: "New York",
                 profile: "General Counsel",
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1gEkSpnZEm.2ma3VBpJNblo-&embedsource=Embed",
