--- a/app/assets/stylesheets/web/common/_icons.scss
+++ b/app/assets/stylesheets/web/common/_icons.scss
@@ -1,5 +1,5 @@
-$sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/ost-sprite-v3-@2x.png";
-$sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/ost-sprite-v3-@1x.png";
+$sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v4-@2x.png";
+$sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v4-@1x.png";
 
 @mixin icon-generator($width,$height,$posX,$posY,$offsetHover,$offsetActive,$scale:100) {
   background-image: url($sprite-location);
@@ -38,6 +38,9 @@ $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/ost-sprit
 }
 .buy-ost-huobi-icon{
   @include icon-generator(200px, 52px, 1px, -164px, -262px, 1px, 70);
+}
+.buy-ost-upbit-icon{
+  @include icon-generator(189px, 52px, 1px, -256px, -262px, 1px, 70);
 }
 
 // Header social icons CSS
