--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -32,7 +32,7 @@
               </div>
             </div>
             <div class="col-xs-12 col-sm-3 align-self-end">
-              <a class="d-inline-block" href="https://www.huobi.pro/ost_eth/exchange/" target="_blank" title="Buy OST on Upbit">
+              <a class="d-inline-block" href="http://www.upbit.com/" target="_blank" title="Buy OST on Upbit">
                 <span class="buy-ost-upbit-icon"></span>
               </a>
               <div class="btn-container mt-4 mb-5">
