--- a/app/views/layouts/ost.erb
+++ b/app/views/layouts/ost.erb
@@ -66,14 +66,11 @@
   <%= stylesheet_link_tag "#{specific_manifest_file_path}", media: 'all' if has_specific_css_manifest_file? %>
 
   <%= csrf_meta_tags %>
-  <script src="https://use.typekit.net/lde7yjs.js"></script>
-  <script>
+
+  <script type="text/javascript">
     window.name = "<%= [*('A'..'Z')].sample(8).join %>";
-    try{Typekit.load({
-      async: true
-    });}catch(e){
-    }
   </script>
+  
 
   <% if Rails.env.production? %>
     <%= render :partial => 'shared/web/common/ga_config_ost' %>
@@ -92,12 +89,13 @@
   <%= render :partial => "/shared/web/common/index_svg_sprite" %>
 </main>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script>
+<link rel="stylesheet" href="https://use.typekit.net/lde7yjs.css" /> 
 <%= javascript_include_tag 'web/common' %>
 <%= javascript_include_tag "#{specific_manifest_file_path}" if has_specific_js_manifest_file? %>
 
 <%= yield(:end_js) %>
+
+
 
 </body>
 </html>
