update the description of the Office Manager

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -57,7 +57,7 @@
             {
                 profile: "Office Manager",
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1vf71LwK5SMuG@7SQ2jX8R8-&embedsource=Embed",
-                description: "We are currently looking for an experienced Office Manager & Head of Administration to join our team in Berlin. The person will be responsible for organising and coordinating everything office and administration related, to ensure a smooth and pleasant working environment. This is a perfect role for an energetic multi-tasker.",
+                description: "We are currently looking for an experienced Office Manager to join our team in Berlin. You love to be there for your team, to take care of others and to ensure the smooth running of processes? It goes without saying that you keep the overview and have organised and structured all tasks in view. You will be responsible for organising and coordinating everything office, administration and travel related to ensure a smooth and pleasant working environment. This is a perfect role for an energetic multi-tasker.",
             },
             {
                 profile: "Product Manager",
