--- a/app/views/web/ost/index/_blockchain_toolkit.erb
+++ b/app/views/web/ost/index/_blockchain_toolkit.erb
@@ -104,7 +104,12 @@
       </ul>
     </div>
     <div class="col-sm-12 col-md-6 p-md-0">
-      <img class="img-fluid" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-blockchain-toolkit-image-v2.png" alt="OST - Blockchain Toolkit"/>
+      <img class="img-fluid responsively-lazy" 
+        src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-blockchain-toolkit-image-v2.png" 
+        alt="OST - Blockchain Toolkit"
+        data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-blockchain-toolkit-image-v2.png" 
+        srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+      />
     </div>
   </div>
   <div class="row justify-content-center mt-5">
