--- a/app/views/web/ost/index/_openst_technology.erb
+++ b/app/views/web/ost/index/_openst_technology.erb
@@ -9,7 +9,12 @@
       <p>
         Blockchain technology designed to scale with the needs and requirements of businesses
       </p>
-      <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/openst-stack-technology-diagram-1.png" class="img-fluid" alt="Stack Technology"/>
+      <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/openst-stack-technology-diagram-1.png" 
+        class="img-fluid responsively-lazy" 
+        alt="Stack Technology"
+        data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/openst-stack-technology-diagram-1.png"
+        srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+      />
     </div>
   </div>
   <div class="row">
