--- a/app/views/web/ost/index/_ost_team.erb
+++ b/app/views/web/ost/index/_ost_team.erb
@@ -12,7 +12,11 @@
       </div>
     </div>
     <div class="col-12 col-sm-6 p-md-0">
-      <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg" class="img-fluid"/>
+      <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg" 
+        class="img-fluid responsively-lazy"
+        data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg"
+        srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+      />
     </div>
   </div>
 </section>
