--- a/app/views/layouts/ost.erb
+++ b/app/views/layouts/ost.erb
@@ -78,7 +78,6 @@
   <%= yield(:head_js) %>
 
   <%= render :partial => "/shared/web/common/fav_icons" %>
-
 </head>
 
 <body contenteditable="false">
@@ -89,13 +88,22 @@
   <%= render :partial => "/shared/web/common/index_svg_sprite" %>
 </main>
 
-<link rel="stylesheet" href="https://use.typekit.net/lde7yjs.css" /> 
+<link rel="stylesheet" href="https://use.typekit.net/lde7yjs.css" />
 <%= javascript_include_tag 'web/common' %>
 <%= javascript_include_tag "#{specific_manifest_file_path}" if has_specific_js_manifest_file? %>
 
 <%= yield(:end_js) %>
 
-
+<script type="text/javascript">
+  $(function () {
+    $( window ).load( function () {
+      setTimeout(function () {
+        var responsivelyLazy = window.responsivelyLazy;
+        responsivelyLazy && responsivelyLazy.forceLoadAll && responsivelyLazy.forceLoadAll();
+      }, 100);
+    })
+  });
+</script>
 
 </body>
 </html>
