Load the fonts at the end of the day.

--- a/app/views/layouts/ost.erb
+++ b/app/views/layouts/ost.erb
@@ -88,7 +88,7 @@
   <%= render :partial => "/shared/web/common/index_svg_sprite" %>
 </main>
 
-<link rel="stylesheet" href="https://use.typekit.net/lde7yjs.css" />
+<!-- link rel="stylesheet" href="https://use.typekit.net/lde7yjs.css" / -->
 <%= javascript_include_tag 'web/common' %>
 <%= javascript_include_tag "#{specific_manifest_file_path}" if has_specific_js_manifest_file? %>
 
@@ -98,6 +98,10 @@
   $(function () {
     $( window ).load( function () {
       setTimeout(function () {
+        //Load typekit fonts.
+        $('head').append('<link rel="stylesheet" href="https://use.typekit.net/lde7yjs.css" />');
+
+        // Force Load All other Images.
         var responsivelyLazy = window.responsivelyLazy;
         responsivelyLazy && responsivelyLazy.forceLoadAll && responsivelyLazy.forceLoadAll();
       }, 100);
