the old link stopped working for some reason by Ignas

--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -117,7 +117,7 @@
                                 name: "Ignas Peciura",
                                 title: "Director of the CEO Office",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Ignas-Peciura.png",
-                                linkedIn: 'https://www.linkedin.com/in/peciurai/',
+                                linkedIn: 'https://www.linkedin.com/in/ipeciura/',
                                 description: "Ignas helps ensure the entire OST business is running smoothly. Ignas has marketing, product management, and ops experience in consumer and B2B apps and financial services. His recent work experience includes OST, Pepo, Mambu GmbH, and Barclays bank. Ignas lives in Berlin where he’s as passionate about the city as he is about his work."
                             },
                             {
