--- a/app/views/web/ost/alpha3winners/_side_by_side.erb
+++ b/app/views/web/ost/alpha3winners/_side_by_side.erb
@@ -116,7 +116,10 @@
       <% if index%2 == 0 %>
         <div class="row pt-5 side-by-side bg-blue">
           <div class="container">
-            <h3 class="mb-4"><%= data[:title]%></h3>
+            <div>
+              <h3 class="mb-4"><%= data[:title]%></h3>
+              <img src="" width=""/>
+            </div>
             <div class="row">
               <div class="col-12 col-md-7 play-video">
                 <div class="video-image">
