--- a/app/views/web/ost/alpha3winners/_jumbotron.erb
+++ b/app/views/web/ost/alpha3winners/_jumbotron.erb
@@ -13,7 +13,9 @@
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
         <div class="illustration w-100">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-jumbotron-hero-image@1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-jumbotron-hero-image@2x.png 1000w" class="img-fluid position-relative" alt="OST Winners Hero"/>
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha3winners-jumbotron-hero-image@1x.png"
+               srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha3winners-jumbotron-hero-image@2x.png 1000w"
+               class="img-fluid position-relative" alt="OST Winners Hero"/>
         </div>
       </div>
 
