--- a/app/views/web/ost/alpha3winners/_twitter_feed.erb
+++ b/app/views/web/ost/alpha3winners/_twitter_feed.erb
@@ -1,7 +1,4 @@
-<section class="container-fluid container-twitter py-5 position-relative" style="overflow: hidden">
-
-  <div class="ost-backward-triangle"></div>
-
+<section class="container-fluid container-twitter py-5 position-relative">
   <div class="row">
     <div class="container pt-5 mt-5">
       <div class="row">
