--- a/app/assets/stylesheets/web/ost/alpha3winners/Signup.scss
+++ b/app/assets/stylesheets/web/ost/alpha3winners/Signup.scss
@@ -47,6 +47,9 @@
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 0;
+    &.form-control{
+      box-shadow: none;
+    }
   }
 
   .input ~ .input-border {
@@ -86,6 +89,14 @@
     border-bottom: 1px solid $white;
   }
 
+  .invalid-feedback{
+    min-height: 20px;
+    display: block;
+    visibility: hidden;
+    &.is-invalid{
+      visibility: visible;
+    }
+  }
 
   .ost-home-link {
     color: $white;
