--- a/app/views/web/ost/alpha3winners/_subscribe.erb
+++ b/app/views/web/ost/alpha3winners/_subscribe.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="row">
         <form data-ost-formhelper
-              action="/api/home/alpha4/signup" method="GET"
+              action="/api/home/alpha/4/signup" method="GET"
               class="custom-form col-11 col-md-6 col-xl-6 mx-auto"
               id="alpha-winners-form">
 
@@ -52,7 +52,7 @@
 
           <div class="input-container form-group m-0">
             <label for="ost_product_communicate" class="label-cbx mb-0">
-              <input class="input form-control" id="ost_product_communicate" type="checkbox"  data-msg-required="Please select the checkbox to continue" name="ost_product_communicate" required value="1">
+              <input class="input form-control" id="ost_product_communicate" data-msg-required="Please select the checkbox to continue" type="checkbox" name="ost_product_communicate" required value="1">
               <div class="checkbox">
                 <svg width="18px" height="18px" viewBox="0 0 20 20">
                   <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
